<resources>
    <string name="app_name">MathOnGo Assignment</string>
    <string name="welcome_text">Welcome to\n<b>Rec</b>ii<b>p</b>ii<b>e</b></string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="home_fragment">Home</string>
    <string name="favourite_fragment">Favourite</string>
    <string name="discover_tasty_and_healthy_receipt">Discover tasty and healthy receipt</string>
    <string name="search_any_recipe">Search any recipe</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="all_recipe">All recipes</string>
    <string name="shahi_paneer">Shahi <b>Paneer</b></string>
    <string name="ready_in">Ready in</string>
    <string name="price_serving">Price/serving</string>
    <string name="servings">Servings</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="equipments">Equipments</string>
    <string name="quick_summary">Quick Summary</string>
    <string name="nutrition">Nutrition</string>
    <string name="bad_nutrition">Bad for health nutrition</string>
    <string name="good_nutrition">Good for health nutrition</string>
    <string name="ad_name">Ad Name</string>
    <string name="ad_description">Ad Description</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="get_ingredients">Get ingredients</string>
    <string name="get_full_recipe">Get full recipe</string>
    <string name="get_similar_recipe">Get similar recipe</string>
    <string name="full_recipe">Full Recipe</string>
    <string name="similar">Similar recipes</string>
</resources>